# JailCall-call-my-agent-hackathon

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_SCRIPT.md  README.md  SPEC.md  TOOLS.md  biome.json  pyproject.toml
bailcall/: __init__.py  config.py  server.py  setup_agent.py  tools.py
evals/: agentphone_audit.py  interactive.py  replay.py  show.py  transcripts.jsonl
jailcall/: __init__.py  build_index.py  call_context.py  config.py  controller.py  dashboard.py  facility.py  memory.py  moss.py  scrape_firm_emails.py  server.py  setup_agent.py  tools.py
jailcall/static/: dashboard.css  dashboard.js  index.html
law_firms/: README.md  cases.tsv  curate_corpus.py  firm_profiles.tsv  law_firms.tsv  moss_documents.jsonl  offense_taxonomy.tsv  scrape_firm_sites.py  summary.json
law_firms/adrienne-dell/: firm.txt
law_firms/alanna-d-coopersmith-attorney-at-law/: firm.txt
law_firms/alanna-d-coopersmithe-attorney-at-law/: firm.txt
law_firms/allen-speare/: firm.txt
law_firms/andrew-cantor/: firm.txt
law_firms/andrian-gallenson/: firm.txt
law_firms/angeli-law-group/: firm.txt
law_firms/angeli-law-group-llc/: firm.txt
law_firms/arent-fox-llp/: firm.txt
law_firms/arnold-law-firm/: firm.txt
law_firms/ash-legal/: firm.txt
law_firms/bacl-pc/: firm.txt
law_firms/baker-and-hostetler-llp/: firm.txt
law_firms/bay-area-dui-defense/: firm.txt
law_firms/beles-and-beles-law-offices/: firm.txt
law_firms/bergstrom-bruce/: firm.txt
law_firms/bethani-jackson-law/: firm.txt
law_firms/blalock-law/: firm.txt
law_firms/bobby-lau/: firm.txt
law_firms/boersch-and-illovsky-llp/: firm.txt
law_firms/boro-law-firm/: firm.txt
law_firms/braunhagey-and-borden-llp/: firm.txt
law_firms/brownstein-hyatt-and-farber-pc/: firm.txt
law_firms/bryan-cave-leighton-paisner-llp/: firm.txt
law_firms/calabria-law-group/: firm.txt
law_firms/cello-law/: firm.txt
law_firms/cindy-a-diamond-attorney-at-law/: firm.txt
law_firms/cohen-williams-llp/: firm.txt
law_firms/conrad-metlitzky-kane-llp/: firm.txt
law_firms/cooley-llp/: firm.txt
law_firms/corrigan-welbourn-and-stokke-aplc/: firm.txt
law_firms/covington-and-burling-llp/: firm.txt
law_firms/crowell-and-moring-llp/: firm.txt
law_firms/david-franklin/: firm.txt
law_firms/david-m-bigeleisen-law-office/: firm.txt
law_firms/defendca/: firm.txt
law_firms/demetrius-costy-law/: firm.txt
law_firms/derek-ewin/: firm.txt
law_firms/diego-ortiz/: firm.txt
law_firms/dla-piper-us-llp/: firm.txt
law_firms/duane-morris-llp/: firm.txt
law_firms/ehrlich-and-craig-llp/: firm.txt
law_firms/emerick-law/: firm.txt
law_firms/farella-braun-and-martel-llp/: firm.txt
law_firms/farella-braun-martel-llp/: firm.txt
law_firms/farmer-brownstein-jaeger-siegel-and-shepard-llp/: firm.txt
law_firms/federal-defender-northern-district-of-california-san-francisco/: firm.txt
law_firms/federal-public-defender-northern-district-of-california/: firm.txt
law_firms/federal-public-defender-oakland/: firm.txt
law_firms/fenwick-and-west-llp/: firm.txt
law_firms/findling-law-firm/: firm.txt
law_firms/gabriela-guraiib/: firm.txt
law_firms/gasner-criminal-law/: firm.txt
law_firms/ginny-walia/: firm.txt
law_firms/glenmorrie-law-llc/: firm.txt
law_firms/goodwin-procter-llp/: firm.txt
law_firms/gorelick-law/: firm.txt
law_firms/greenberg-traurig-llp/: firm.txt
law_firms/gregory-alonzo/: firm.txt
law_firms/guyton-jinkerson/: firm.txt
law_firms/haley-giuliano-llp/: firm.txt
law_firms/haynes-and-boone-llp/: firm.txt
law_firms/holden-green/: firm.txt
law_firms/hwg-llp/: firm.txt
law_firms/illovsky-and-calia-llp/: firm.txt
law_firms/illovsky-gates-and-calia-llp/: firm.txt
law_firms/j-p-sheridan-law/: firm.txt
law_firms/javier-rios/: firm.txt
law_firms/jayne-law/: firm.txt
law_firms/jayne-law-group/: firm.txt
law_firms/jayne-law-group-jayne-law-group/: firm.txt
law_firms/jeffrey-hayden/: firm.txt
law_firms/jesse-berkowitz-law/: firm.txt
law_firms/jesse-garcia/: firm.txt
law_firms/johann-hall/: firm.txt
law_firms/john-pierce-law-p-c/: firm.txt
law_firms/johnson-and-johnson/: firm.txt
law_firms/jonathan-steele/: firm.txt
law_firms/jones-day/: firm.txt
law_firms/kalar-law-office/: firm.txt
law_firms/kanekimball-llp/: firm.txt
law_firms/kathryn-ross-attorney-at-law/: firm.txt
law_firms/keith-law-office/: firm.txt
law_firms/keker-van-nest-and-peters-llp/: firm.txt
law_firms/khouri-law-firm-apc/: firm.txt
law_firms/king-and-spalding-llp/: firm.txt
law_firms/kirkland-and-ellis-llp/: firm.txt
law_firms/knight-law/: firm.txt
law_firms/lamano-law-office/: firm.txt
law_firms/law-office-of-adam-pennella/: firm.txt
law_firms/law-office-of-adrienne-dell/: firm.txt
law_firms/law-office-of-alan-m-lagod/: firm.txt
law_firms/law-office-of-allen-c-speare/: firm.txt
law_firms/law-office-of-andrew-cantor/: firm.txt
law_firms/law-office-of-anthony-j-brass/: firm.txt
law_firms/law-office-of-arturo-hernandez/: firm.txt
law_firms/law-office-of-bruce-c-funk/: firm.txt
law_firms/law-office-of-carleen-r-arlidge/: firm.txt
law_firms/law-office-of-darlene-bagley-comstedt/: firm.txt
law_firms/law-office-of-e-michael-linscheid/: firm.txt
law_firms/law-office-of-harris-b-taback/: firm.txt
law_firms/law-office-of-javier-rios/: firm.txt
law_firms/law-office-of-jeremy-d-blank/: firm.txt
law_firms/law-office-of-john-d-cline/: firm.txt
law_firms/law-office-of-john-halley-appellant/: firm.txt
law_firms/law-office-of-john-j-jordan/: firm.txt
law_firms/law-office-of-john-p-campion/: firm.txt
law_firms/law-office-of-julia-freis/: firm.txt
law_firms/law-office-of-karen-mcconville/: firm.txt
law_firms/law-office-of-keith-fox/: firm.txt
law_firms/law-office-of-mark-r-vermeulen/: firm.txt
law_firms/law-office-of-michelle-d-spencer/: firm.txt
law_firms/law-office-of-milo-william-anderson/: firm.txt
law_firms/law-office-of-nathaniel-j-torres/: firm.txt
law_firms/law-office-of-nicole-lambros/: firm.txt
law_firms/lipton-law/: firm.txt
(+600 files in other folders)
