[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jailcall"
version = "0.1.0"
description = "Emergency legal access voice agent — YC Call My Agent Hackathon 2026-05-17."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "anthropic>=0.102.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "browser-use-sdk>=3.6.0",
    "agentmail>=0.5.0",
    "agentphone>=0.7.0",
    "google-genai>=2.3.0",
    "moss>=1.0.0",
    "supermemory>=3.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "basedpyright>=1.39.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["jailcall"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff — every rule on, narrow set of intentional carve-outs.
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
# law_firms/ holds curated firm data + a one-shot scraping/curation script
# that is not part of the jailcall package. Lint rules don't apply there.
extend-exclude = [".venv", ".git", "law_firms"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicts with the ruff formatter (per ruff docs).
    "COM812",
    "ISC001",
    # basedpyright's reportImplicitStringConcatenation requires explicit `+`,
    # which ISC003 flags. The basedpyright rule wins for this project.
    "ISC003",

    # Docstring convention conflicts — Google style picks one of each pair.
    "D203",
    "D213",

    # Project-level call-outs.
    "CPY001",   # No copyright headers required.
    "TRY003",   # Allow long messages in raise — ergonomic for hackathon.
    "EM101",    # Allow string literal in exception — ergonomic.
    "EM102",    # Allow f-string in exception — ergonomic.
    "FIX002",   # TODO comments are fine — we will have plenty today.
    "TD003",    # We don't track TODOs in an issue tracker for this project.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # asserts are the point of pytest
    "PLR2004",  # magic numbers in tests are fine
    "D",        # docstrings optional in tests
    "ANN",      # type hints optional in tests
    "INP001",   # tests dir doesn't need __init__.py
]
"jailcall/setup_agent.py" = [
    "T201",     # print() in setup scripts is intentional
]
"jailcall/build_index.py" = [
    "T201",     # print() in CLI scripts is intentional
]
"jailcall/controller.py" = [
    "E501",     # SYSTEM_PROMPT is verbatim from SPEC.md — locked text, can't reflow
]
"jailcall/dashboard.py" = [
    "PLR0913",  # recorder fns take many kw-only fields by design
]
"evals/**" = [
    "INP001",   # eval scripts are runnable modules, no __init__.py needed
    "T201",     # print() is the whole point of a CLI runner
    "S101",     # asserts are how we encode invariants in the harness
    "PLR2004",  # magic numbers (status codes, port numbers) are fine
    "PLR0913",  # harness helpers often take many kw-only params; clarity > arg count
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["jailcall"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

# ─────────────────────────────────────────────────────────────────────────────
# basedpyright — strictest mode. Pyright's superset with extra checks.
# ─────────────────────────────────────────────────────────────────────────────
[tool.basedpyright]
include = ["jailcall"]
exclude = [".venv", "**/__pycache__", "**/node_modules"]
typeCheckingMode = "all"
pythonVersion = "3.13"
reportImplicitOverride = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"
# Third-party SDKs (agentphone/agentmail/browser-use/moss) lack full stubs,
# so SDK adapter code (jailcall/build_index.py, jailcall/moss.py,
# jailcall/scrape_firm_emails.py) generates a lot of Any-typed return
# values whose runtime shapes we trust by convention. Demote the noisy
# rules so they don't block CI; real bugs in our own code still surface.
reportMissingTypeStubs = "information"
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ─────────────────────────────────────────────────────────────────────────────
# djLint — strict HTML linting + formatting
# ─────────────────────────────────────────────────────────────────────────────
[tool.djlint]
profile = "html"
indent = 2
preserve_blank_lines = false
format_attribute_template_tags = true
# H006: <img> tags must have width/height. H013: <img> must have alt.
# H030/H031: <meta description>/<meta keywords> required. Keep these on
# for accessibility/SEO discipline, even on the internal dashboard.
